# KitchenBot

./: README.md
gazebo_differential_drive_robot/: CMakeLists.txt  package.xml  setup.py
gazebo_differential_drive_robot/config/: gz_bridge.yaml
gazebo_differential_drive_robot/gazebo_differential_drive_robot/: odom_to_tf.py  send_goal.py
gazebo_differential_drive_robot/launch/: robot.launch.py
gazebo_differential_drive_robot/meshes/: LAB.stl
gazebo_differential_drive_robot/model/: robot.xacro
gazebo_differential_drive_robot/worlds/: laboratory.sdf
